integrate customised smac for multi configurations initialisation